--- a/politicasdeprivacidade.html
+++ b/politicasdeprivacidade.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jia Long</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="-Von4gCzVY6cZr28TQ8mpRB430KrsU4heG_yC19jNSw" />
+  <title>JiaLong Pack</title>
+  <meta name="description" content="Maquinários para encartuchamento, desde 1958 lider no mercado chinês agora está no Brasil.">
+  <meta name="keywords" content="máquina flexográfica, encartuchamento, maquinas para imprimir papelão, embalagens, impressão de embalagens, jialongpack, jialongpack brasil, jialong brasil, jialongpack br">
+  <link rel="canonical" href="https://jialongpack.com.br">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="JiaLong Pack">
 
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="JiaLong Pack - Encartuchamento">
+  <meta property="og:description" content="Maquinários para encartuchamento, desde 1958 lider no mercado chinês agora está no Brasil.">
+  <meta property="og:site_name" content="Máquinas flexográficas para encartuchamento líder de mercado.">
+  <meta property="og:url" content="https://jialongpack.com.br">
+  <meta property="og:image" content="img/logo-jia-long-pack.png">
     <link rel="shortcut icon" href="img/fav.png" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
